[tool.poetry]
name = "dpq"
version = "0.1.0"
description = ""
authors = ["quatrix"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
redis = "^3.5.3"
cloudpickle = "^1.6.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
